--- a/spring-pet-clinic/pom.xml
+++ b/spring-pet-clinic/pom.xml
@@ -11,7 +11,8 @@
 	<groupId>com.juanfuente</groupId>
 	<artifactId>spring-pet-clinic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-pet-clinic</name>
+    <packaging>pom</packaging>
+    <name>spring-pet-clinic</name>
 	<description>Spring Boot Pet Clinic Project</description>
 	<url/>
 	<licenses>
@@ -20,7 +21,12 @@
 	<developers>
 		<developer/>
 	</developers>
-	<scm>
+    <modules>
+        <module>pet-clinic-data</module>
+		<module>pet-clinic-web</module>
+        <module>pet-clinic-web</module>
+    </modules>
+    <scm>
 		<connection/>
 		<developerConnection/>
 		<tag/>
